<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/edt_reason"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/reason"
            android:textColorHint="@color/colorLightAsh"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"/>




    </LinearLayout>

        <LinearLayout
           android:gravity="center"
           android:weightSum="4"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
               android:visibility="invisible"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:gravity="center"
                android:background="@drawable/login_button"/>


            <TextView
        android:id="@+id/tv_submit"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        android:gravity="center"
        android:background="@drawable/login_button"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tv_cancel"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:gravity="center"
                android:background="@drawable/login_button"/>

            <TextView
                android:visibility="invisible"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:gravity="center"
                android:background="@drawable/login_button"/>


        </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:weightSum="4"

        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:orientation="horizontal">

    </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>